version 1.03:
* support FMOD5
* save demo/arguments/target settings
* integrated x264.exe
* add a bat file help people convert 264+wav to mp4
* add a bat file help people convert vfw26 avi to mp4
* "attempt clean exit" key change from right ctrl to right alt

version 1.03-wip:
* added direct x264 capture (requires x264.exe to be in the PATH, and a user that knows how its command line arguments work)
* initial attempt at a 64-bit version, doesn't support DirectShow capture yet;
  note that you need to know if the demo you're capturing is 32-bit or 64-bit, because:
  - 32-bit kkapture can't run 64-bit demos at all
  - 64-bit kkapture runs 32-bit demos as if they are started without kkapture
* d3d11: D3D11CreateDeviceAndSwapChain support
* sound: force BASS to use DirectSound instead of WASAPI (this should fix audio in all demos which use a recent version of BASS)
* various other bugfixes

version 1.02:
* added "fake additional screen resolution" option (thanks KeyJ)
* switched from (long defunct) detours 1.5 to free mhook-2.2 (http://codefromthe70s.org/mhook22.aspx).
* redid startup interception yet again: now using simple DLL injection via CreateRemoteThread. should work fine with .NET executables and be less flaky in general.
* sound: lock entire directsound buffer when dwBytes=0 (fix for "mother mother, my ears bleed")
* d3d11 support

version 1.01:
* "skip frames on frequent timer checks" can now be turned off; threshold set to a substantially higher value.
* "virtual framebuffer" mode for old, badly written ddraw apps (e.g. "fall equals winter"). won't work with hw accelerated blits and clears! use as a last resort.

version 1.00:
* major bump in version number! :)
* timing: fixed a regression from version 0.07 (should work a lot better on vista and windows 7 now)
* sound/timing: automatically advance frame after some time when app asks for the current time a certain number of times (helps with several quite intros)