@@ -88,7 +88,7 @@ void X264VideoEncoder::WriteFrame(const unsigned char *buffer)
 
     // build the x264 command line
     _snprintf_s(temp, sizeof(temp)/sizeof(*temp),
-                "\"%s\" --demuxer raw --input-csp bgr --input-res %dx%d --fps %d/%d %s -o \"%s.mkv\" -",
+                "\"%s\" --demuxer raw --input-csp bgr --input-res %dx%d --fps %d/%d %s -o \"%s.mp4\" -",
                 x264ExePath, xRes, yRes, fpsNum, fpsDenom, opts, prefix);
     printLog("x264: command line: %s\n", temp);
     WriteFile(hLogFile, (LPCVOID)&temp[0], (DWORD)strlen(temp), &dwDummy, NULL);
