@@ -1,6 +1,6 @@
-### convert_264+wac_to_mp4.bat
-If you using x264 encoder, you will get `xxx.264` and `xxx.wav` files.
-Drag and drop the `xxx.264` file onto the `tools/convert_264+wac_to_mp4.bat` file will merge it with the `xxx.wav` file and output the `xxx.mp4` file.
+### combine_mp4+wac_to_mp4.bat
+If you using x264 encoder, you will get `xxx.mp4` and `xxx.wav` files.
+Drag and drop the `xxx.mp4` file onto the `tools/combine_mp4+wac_to_mp4.bat` file will merge it with the `xxx.wav` file and output the `xxx_with_audio.mp4` file.
 
 ### convert_264vfw_avi_to_mp4.bat
 If you using [x264vfw](https://www.videohelp.com/software/x264-VFW).
